[project]
name = "ToBook"
version = "0.1"
description = "Convert various kinds of document into an ebook"
readme = "README.md"
authors = [{name = "R.Keelan"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "bs4",
    "click",
    "ebooklib",
    "markdown"
]

[project.urls]
Homepage = "https://github.com/RKeelan/ToBook"
Changelog = "https://github.com/RKeelan/ToBook/releases"
Issues = "https://github.com/RKeelan/ToBook/issues"
CI = "https://github.com/RKeelan/ToBook/actions"

[project.scripts]
ToBook = "ToBook.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
